change buttons design into default

--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -18,11 +18,11 @@
     <%= f.hidden_field :days_to_reminder, value: 7 %>
   </div>
 
-  
+
 
   <div class="form-actions">
   <%= link_to 'Back', flat_path(@flat), class: "btn btn-default" %>
-    <%= f.button :submit, :class => "submit-btn" %>
+    <%= f.button :submit, :class => "btn btn-default" %>
   </div>
 <% end %>
 
