--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -4,7 +4,7 @@
     <ul class="list-inline" >
       <li><h1>Listing Contracts</h1></li>
 
-      <li><%= link_to raw("<li class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"> edit </span>"), :class => "submit-btn" %>
+      <li><%= link_to raw("<li class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"> edit </span>"), :class => "btn btn-default" %>
       </li>
     </ul>
 
