--- a/app/views/costs/index.html.erb
+++ b/app/views/costs/index.html.erb
@@ -64,8 +64,8 @@
 <p>Real charges are the ones that your property manager provided you with.</p>
 
         <% end %>
-<%= link_to 'Add real charges', new_contract_cost_path(@contract.id), class: 'submit-btn' %>
-<%= link_to 'Back', flats_path, class: 'submit-btn' %>
+<%= link_to 'Add real charges', new_contract_cost_path(@contract.id), class: 'btn btn-default' %>
+<%= link_to 'Back', flats_path, class: 'btn btn-default' %>
 
   </div>
 </div>
