--- a/app/views/documents/_modal.html.erb
+++ b/app/views/documents/_modal.html.erb
@@ -10,7 +10,7 @@
                       <%= cl_image_tag(document.attachment, :format => :jpg, :width=>300, :height=>450, :border=>"1px_solid_black", :crop=>"fill" ) %>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="submit-btn" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                   </div>
                 </div>
               </div>
