--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -24,9 +24,9 @@
 </div>
 
 <div class="form-actions">
-  <%= link_to 'Back', flats_path, class: 'submit-btn' %>
+  <%= link_to 'Back', flats_path, class: 'btn btn-default' %>
 
-  <%= f.button :submit, :class => "submit-btn" %>
+  <%= f.button :submit, :class => "btn btn-default" %>
 </div>
 <% end %>
 
