--- a/app/views/owners/confirmations/new.html.erb
+++ b/app/views/owners/confirmations/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions", :class => "submit-btn" %>
+    <%= f.button :submit, "Resend confirmation instructions", :class => "btn btn-default" %>
   </div>
 <% end %>
 
