--- a/app/views/contracts/pick_renter.html.erb
+++ b/app/views/contracts/pick_renter.html.erb
@@ -23,7 +23,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up", :class => "submit-btn" %>
+        <%= f.button :submit, "Sign up", :class => "btn btn-default" %>
       </div>
       <% end %>
 
