--- a/app/views/costs/_costform.html.erb
+++ b/app/views/costs/_costform.html.erb
@@ -1,7 +1,7 @@
  <%= simple_form_for [@contract, @cost] do |f| %>
       <%= f.error_notification %>
       <div class="form-actions">
-        <%= f.button :submit, :class => "submit-btn" %>
+        <%= f.button :submit, :class => "btn btn-default" %>
       </div>
 
       <div class="form-inputs">
@@ -19,6 +19,6 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, :class => "submit-btn" %>
+        <%= f.button :submit, :class => "btn btn-default" %>
       </div>
     <% end %>
