--- a/app/views/costs/new.html.erb
+++ b/app/views/costs/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Costs#new</h1>
+<h1>Costs new</h1>
 <p>Find me in app/views/costs/new.html.erb</p>
-<%= link_to 'Back', contract_costs_path, class: 'submit-btn' %>
+<%= link_to 'Back', contract_costs_path, class: 'btn btn-default' %>
 
 
     <%= render 'costform' %>
