--- a/app/views/costs/openclearsumcosts.html.erb
+++ b/app/views/costs/openclearsumcosts.html.erb
@@ -136,5 +136,5 @@
   </div>
 
 
-<%= link_to 'Back', contract_costs_path, class: 'submit-btn' %>
+<%= link_to 'Back', contract_costs_path, class: 'btn btn-default' %>
 
