--- a/app/views/costs/show.html.erb
+++ b/app/views/costs/show.html.erb
@@ -6,6 +6,6 @@
     <%= render 'costshow' %>
 
 
-  <%= link_to 'Back', contract_costs_path(@contract), class: 'submit-btn' %>
+  <%= link_to 'Back', contract_costs_path(@contract), class: 'btn btn-default' %>
 </div>
 
