--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, :class => "submit-btn" %>
+    <%= f.button :submit, :class => "btn btn-default" %>
   </div>
 <% end %>
 
