--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
  <br>
- <%= link_to 'Add a new property', new_flat_path, :class => "submit-btn" %>
+ <%= link_to 'Add a new property', new_flat_path, :class => "btn btn-default" %>
 
 </div>
 
