--- a/app/views/owners/passwords/edit.html.erb
+++ b/app/views/owners/passwords/edit.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Change my password", :class => "submit-btn" %>
+    <%= f.button :submit, "Change my password", :class => "btn btn-default" %>
   </div>
 <% end %>
 
