--- a/app/views/owners/registrations/edit.html.erb
+++ b/app/views/owners/registrations/edit.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update", :class => "submit-btn" %>
+    <%= f.button :submit, "Update", :class => "btn btn-default" %>
   </div>
 <% end %>
 
