--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", :class => "submit-btn" %>
+    <%= f.button :submit, "Sign up", :class => "btn btn-default" %>
     <% end %>
   </div>
 <p><br><br></p>
