--- a/app/views/pages/_form_contact.html.erb
+++ b/app/views/pages/_form_contact.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :email %>
     <%= f.input :gender, label: "Your question" %>
 </div>
-    <%= f.button :submit, class: "submit-btn", value: "Send your question" %>
+    <%= f.button :submit, class: "btn btn-default", value: "Send your question" %>
   <% end %>
 
 
