--- a/app/views/renters/new.html.erb
+++ b/app/views/renters/new.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Create new tenant", :class => "submit-btn" %>
+        <%= f.button :submit, "Create new tenant", :class => "btn btn-default" %>
       </div>
       <% end %>
 
