--- a/app/views/renters/registrations/new.html.erb
+++ b/app/views/renters/registrations/new.html.erb
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up", :class => "submit-btn" %>
+      <%= f.button :submit, "Sign up", :class => "btn btn-default" %>
     </div>
     <% end %>
 
